minijinja/tests/snapshots/test_templates__vm@functions.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "short-range: {{ range(10) }}\nrange-is-iterable: {{ range(10) is iterable }}\nrange-is-not-a-sequence: {{ range(10) is not sequence }}\nnegative-range: {{ range(-5, 5) }}\nnegative-start: {{ range(-3, 3, 2) }}\nnegative-step: {{ range(5, -5, -2) }}\nnegative-step-off: {{ range(5, -4, -2) }}"
info: {}
input_file: minijinja/tests/inputs/functions.txt
---
short-range: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
range-is-iterable: True
range-is-not-a-sequence: True
negative-range: [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4]
negative-start: [-3, -1, 1]
negative-step: [5, 3, 1, -1, -3]
negative-step-off: [5, 3, 1, -1, -3]
