minijinja/tests/snapshots/test_templates__vm@hello.txt.snap
---
source: minijinja/tests/test_templates.rs
expression: "&rendered"
input_file: minijinja/tests/inputs/hello.txt

---
Hello World!
=====

Template {
    name: "hello.txt",
    instructions: [
        00000 | EMIT_RAW (string "Hello ")  [line 1],
        00001 | LOOKUP (var "name"),
        00002 | EMIT,
        00003 | EMIT_RAW (string "!"),
    ],
    blocks: {},
    initial_auto_escape: None,
}
