minijinja/tests/snapshots/test_templates__vm@loop.txt.snap
---
source: minijinja/tests/test_templates.rs
expression: "&rendered"
input_file: minijinja/tests/inputs/loop.txt

---
<ul>

    <li>1</li>

    <li>2</li>

    <li>3</li>

</ul>

=====

Template {
    name: "loop.txt",
    instructions: [
        00000 | EMIT_RAW (string "<ul>\n")   [loop.txt:1],
        00001 | LOOKUP (var "seq")   [loop.txt:2],
        00002 | PUSH_LOOP (loop var: true)   [loop.txt:2],
        00003 | ITERATE (exit to 0000a)   [loop.txt:2],
        00004 | STORE_LOCAL (var "item")   [loop.txt:2],
        00005 | EMIT_RAW (string "\n    <li>")   [loop.txt:2],
        00006 | LOOKUP (var "item")   [loop.txt:3],
        00007 | EMIT   [loop.txt:3],
        00008 | EMIT_RAW (string "</li>\n")   [loop.txt:3],
        00009 | JUMP (to 00003)   [loop.txt:3],
        0000a | POP_FRAME   [loop.txt:3],
        0000b | EMIT_RAW (string "\n</ul>\n")   [loop.txt:4],
    ],
    blocks: {},
    initial_auto_escape: None,
}
