minijinja/tests/snapshots/test_templates__vm@loop_bad_unpacking.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "<ul>\n{% for a, b in seq %}\n  <li>{{ a }}: {{ b }}\n{% endfor %}\n</ul>"
info:
  seq:
    - 1
    - 2
    - 3
input_file: minijinja/tests/inputs/loop_bad_unpacking.txt
---
!!!ERROR!!!

Error {
    kind: CannotUnpack,
    detail: "not a sequence",
    name: "loop_bad_unpacking.txt",
    line: 2,
}

cannot unpack: not a sequence (in loop_bad_unpacking.txt:2)
--------------------------- loop_bad_unpacking.txt ----------------------------
   1 | <ul>
   2 > {% for a, b in seq %}
     i        ^^^^ cannot unpack
   3 |   <li>{{ a }}: {{ b }}
   4 | {% endfor %}
   5 | </ul>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    loop: Loop {
        index0: 0,
        index: 1,
        length: 3,
        revindex: 3,
        revindex0: 2,
        first: true,
        last: false,
        depth: 1,
        depth0: 0,
        previtem: Undefined,
        nextitem: 2,
    },
    seq: [
        1,
        2,
        3,
    ],
}
-------------------------------------------------------------------------------

